--- a/contact.html
+++ b/contact.html
@@ -226,28 +226,25 @@
                   <i class="bi bi-geo-alt flex-shrink-0"></i>
                   <div>
                     <h4>Location:</h4>
-                    <p>120/1/D Wateraka, padukka, srilanka.</p>
+                    <p><a href="https://maps.app.goo.gl/3JcgYc224XmKmdN96">120/1/D Wateraka, padukka, srilanka.</a></p>
                   </div>
-                </div><!-- End Info Item -->
+                </div><!-- Address -->
 
                 <div class="info-item d-flex">
                   <i class="bi bi-envelope flex-shrink-0"></i>
-                  <div><a href="mailto:info@travelsgolanka.com">
+                  <div>
                     <h4>Email:</h4>
-                    <p>info@travelsgolanka.com</p>
-                  </a>
+                    <p><a href="mailto:info@travelsgolanka.com">info@travelsgolanka.com</a></p>
                   </div>
-                </div><!-- End Info Item -->
+                </div><!-- Email -->
 
                 <div class="info-item d-flex">
                   <i class="bi bi-phone flex-shrink-0"></i>
                   <div>
-                    <a href="tel:+94743773190">
                     <h4>Call:</h4>
-                    <p>+94 74 377 3190</p>
-                  </a>
+                    <p><a href="tel:+94743773190">+94 74 377 3190</a></p>
                   </div>
-                </div><!-- End Info Item -->
+                </div><!-- Mobile number -->
 
               </div>
             </div>
@@ -318,7 +315,7 @@
           
                   <div class="mb-3">
                       <label for="requirements" class="form-label">Your requirements (No of adults & kids, Interests) *</label>
-                      <textarea class="form-control" id="requirements" name="requirements" rows="4" required></textarea>
+                      <textarea class="form-control" id="requirements" name="requirements" rows="2" required></textarea>
                   </div>
           
                   <button type="submit" class="btn btn-primary">Submit</button>
@@ -345,11 +342,11 @@
               </a>
               <div class="footer-contact pt-3">
                 <p><strong>Address:</strong>
-                  <a href="">
-                    Godagam, Homagama
+                  <a href="https://maps.app.goo.gl/3JcgYc224XmKmdN96">
+                    120/1/D Wateraka, padukka, srilanka.
                   </a>
                 </p>
-                <p class=""><strong>Phone:</strong><span><a href="tel:+94743773190">+94 74 377 3190</a></span></p>
+                <p><strong>Phone:</strong><span><a href="tel:+94743773190">+94 74 377 3190</a></span></p>
                 <p><strong>Email:</strong> <span><a href="mailto:info@travelsgolanka.com">info@travelsgolanka.com</a></span></p>
               </div>
             </div>
@@ -359,7 +356,7 @@
               <ul>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="index.html#Tour_Packages">Tour Packages</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="#">Contact</a></li>
                 <li><a href="ThingsToDoinSriLanka.html">Things To Do in SriLanka</a></li>
               </ul>
             </div>
