--- a/index.html
+++ b/index.html
@@ -813,11 +813,11 @@
               </a>
               <div class="footer-contact pt-3">
                 <p><strong>Address:</strong>
-                  <a href="">
+                  <a href="https://maps.app.goo.gl/3JcgYc224XmKmdN96">
                     120/1/D Wateraka, padukka, srilanka.
                   </a>
                 </p>
-                <p class=""><strong>Phone:</strong><span><a href="tel:+94743773190">+94 74 377 3190</a></span></p>
+                <p><strong>Phone:</strong><span><a href="tel:+94743773190">+94 74 377 3190</a></span></p>
                 <p><strong>Email:</strong> <span><a href="mailto:info@travelsgolanka.com">info@travelsgolanka.com</a></span></p>
               </div>
             </div>
