responsicve issue fixed

--- a/info-family_beaches.html
+++ b/info-family_beaches.html
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/beaches-in-sri-lanka 2.jpg" class="d-block img-fluid" alt="Best Family-Friendly Beaches in Sri Lanka" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/beaches-in-sri-lanka 2.jpg" class="d-block img-fluid" alt="Best Family-Friendly Beaches in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/beaches-in-sri-lanka 3.jpg" class="d-block img-fluid" alt="Best Family-Friendly Beaches in Sri Lanka" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/beaches-in-sri-lanka 3.jpg" class="d-block img-fluid" alt="Best Family-Friendly Beaches in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/beaches-in-sri-lanka 4.jpg" class="d-block img-fluid" alt="Best Family-Friendly Beaches in Sri Lanka" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/beaches-in-sri-lanka 4.jpg" class="d-block img-fluid" alt="Best Family-Friendly Beaches in Sri Lanka" >
                         </div>
                     </div>
                 
