--- a/info-polonnaruwa.html
+++ b/info-polonnaruwa.html
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Travel/srilanka-polonnaruwa-city.jpg" class="d-block img-fluid" alt="Ancient City of Polonnaruwa – A Journey into Sri Lanka’s Glorious Past" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Travel/srilanka-polonnaruwa-city.jpg" class="d-block img-fluid" alt="Ancient City of Polonnaruwa – A Journey into Sri Lanka’s Glorious Past" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Polonnaruwa 2.jpg" class="d-block img-fluid" alt="Ancient City of Polonnaruwa – A Journey into Sri Lanka’s Glorious Past" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Polonnaruwa 2.jpg" class="d-block img-fluid" alt="Ancient City of Polonnaruwa – A Journey into Sri Lanka’s Glorious Past" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Polonnaruwa 1.jpg" class="d-block img-fluid" alt="Ancient City of Polonnaruwa – A Journey into Sri Lanka’s Glorious Past" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Polonnaruwa 1.jpg" class="d-block img-fluid" alt="Ancient City of Polonnaruwa – A Journey into Sri Lanka’s Glorious Past" >
                         </div>
                     </div>
                 
