--- a/info-temple_of_tooth.html
+++ b/info-temple_of_tooth.html
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/temple-of-the-sacred-tooth-relic-kandy-sri-lanka.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/temple-of-the-sacred-tooth-relic-kandy-sri-lanka.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/temple-of-the-sacred-tooth-relic-kandy.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/temple-of-the-sacred-tooth-relic-kandy.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/dalada_maligava.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/dalada_maligava.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" >
                         </div>
                     </div>
                 
