--- a/info-Sea_turtles.html
+++ b/info-Sea_turtles.html
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/Turtle 1.jpg" class="d-block img-fluid" alt="Best Places to See Sea Turtles in Sri Lanka" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Turtle 1.jpg" class="d-block img-fluid" alt="Best Places to See Sea Turtles in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Turtle 2.jpg" class="d-block img-fluid" alt="Best Places to See Sea Turtles in Sri Lanka" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Turtle 2.jpg" class="d-block img-fluid" alt="Best Places to See Sea Turtles in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka//Turtle 4.jpg" class="d-block img-fluid" alt="Best Places to See Sea Turtles in Sri Lanka" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka//Turtle 4.jpg" class="d-block img-fluid" alt="Best Places to See Sea Turtles in Sri Lanka" >
                         </div>
                     </div>
                 
