--- a/info-anuradhapura.html
+++ b/info-anuradhapura.html
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/Anuradhapura-city 3.jpg" class="d-block img-fluid" alt="Ancient City of Anuradhapura – A Timeless Heritage Site" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Anuradhapura-city 3.jpg" class="d-block img-fluid" alt="Ancient City of Anuradhapura – A Timeless Heritage Site" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Anuradhapura-city 4.jpg" class="d-block img-fluid" alt="Ancient City of Anuradhapura – A Timeless Heritage Site" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Anuradhapura-city 4.jpg" class="d-block img-fluid" alt="Ancient City of Anuradhapura – A Timeless Heritage Site" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Anuradhapura-city 2.jpg" class="d-block img-fluid" alt="Ancient City of Anuradhapura – A Timeless Heritage Site" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Anuradhapura-city 2.jpg" class="d-block img-fluid" alt="Ancient City of Anuradhapura – A Timeless Heritage Site" >
                         </div>
                     </div>
                 
