--- a/info-sigiriya.html
+++ b/info-sigiriya.html
@@ -214,13 +214,13 @@
                   <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/Sigiriya.jpg" class="d-block img-fluid" alt="Sigiriya Rock" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Sigiriya.jpg" class="d-block img-fluid" alt="Sigiriya Rock" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Sigiriya 02.jpg" class="d-block img-fluid" alt="Sigiriya Rock" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Sigiriya 02.jpg" class="d-block img-fluid" alt="Sigiriya Rock" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Sigiriya 03.jpg" class="d-block img-fluid" alt="Sigiriya Rockt" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/Sigiriya 03.jpg" class="d-block img-fluid" alt="Sigiriya Rockt" >
                         </div>
                     </div>
                 
