--- a/info-yala_national_park.html
+++ b/info-yala_national_park.html
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/sri-lanka-leopard-asian.jpg" class="d-block img-fluid" alt="Yala National Park | leopard" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/sri-lanka-leopard-asian.jpg" class="d-block img-fluid" alt="Yala National Park | leopard" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/yala_bird.jpg" class="d-block img-fluid" alt="Yala National Park Bird" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/yala_bird.jpg" class="d-block img-fluid" alt="Yala National Park Bird" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/elephants+yala+national+park+sri+lanka.jpg" class="d-block img-fluid" alt="Yala National Park | Elephants" style="width: 100%; height: 450px; object-fit: cover;">
+                            <img src="assets/img/Things To Do in Sri Lanka/elephants+yala+national+park+sri+lanka.jpg" class="d-block img-fluid" alt="Yala National Park | Elephants" >
                         </div>
                     </div>
                 
