--- a/info-Sea_turtles.html
+++ b/info-Sea_turtles.html
@@ -187,7 +187,7 @@
     <main class="main">
 
       <!-- Page Title -->
-      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/hero_1.jpg);">
+      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Travel/turtle.jpg);">
         <div class="container position-relative">
           <h1>Best Places to See Sea Turtles in Sri Lanka</h1>
           <p>Sri Lanka is home to five species of sea turtles, and there are several places where you can spot them in the wild or visit conservation centers. </p>
