--- a/info-family_beaches.html
+++ b/info-family_beaches.html
@@ -187,7 +187,7 @@
     <main class="main">
 
       <!-- Page Title -->
-      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/hero_1.jpg);">
+      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Travel/beach.jpg);">
         <div class="container position-relative">
           <h1>Best Family-Friendly Beaches in Sri Lanka</h1>
           <p>Sri Lanka’s coastline is home to some of the most beautiful and family-friendly beaches, perfect for swimming, relaxing, and enjoying water activities with kids.</p>
