--- a/info-temple_of_tooth.html
+++ b/info-temple_of_tooth.html
@@ -187,7 +187,7 @@
     <main class="main">
 
       <!-- Page Title -->
-      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/hero_1.jpg);">
+      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Travel/dalada_maligava.jpg);">
         <div class="container position-relative">
           <h1>Temple of the Tooth Relic (Sri Dalada Maligawa)</h1>
           <p>The Temple of the Tooth Relic, locally known as Sri Dalada Maligawa, is one of the most sacred Buddhist temples in the world.</p>
