--- a/contact.html
+++ b/contact.html
@@ -174,7 +174,7 @@
           <ul>
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About Us</a></li>
-            <li><a href="index.html#Tour_Packages">Tour Packeges</a></li>
+            <li><a href="index.html#Tour_Packages">Tour Packages</a></li>
             <li><a href="ThingsToDoinSriLanka.html">Things To Do in SriLanka</a></li>
             <li><a href="#" class="active">Contact</a></li>
           </ul>
