update carasal image

--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                         <h2 class="service-item-title">Adam's Peak</h2>
                       </a>
                     </div>
-                    <img src="assets/img/Travel/about-1.jpg" alt="Image" class="img-fluid">
+                    <img src="assets/img/Travel/about-Adam's-Peak.jpg" alt="Image" class="img-fluid">
                   </div>
                 </div>
                 <div class="swiper-slide">
@@ -549,6 +549,45 @@
                     <img src="assets/img/Travel/about-Nuwara-Eliya.jpg" alt="Image" class="img-fluid">
                   </div>
                 </div>
+
+
+                <div class="swiper-slide">
+                  <div class="service-item">
+                    <div class="service-item-contents">
+                      <a>
+                        <span class="service-item-category">We do</span>
+                        <h2 class="service-item-title">Coconut Tree Hill</h2>
+                      </a>
+                    </div>
+                    <img src="assets/img/Travel/about-coconut-tree-hill-mirissa.jpg" alt="Image" class="img-fluid">
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="service-item">
+                    <div class="service-item-contents">
+                      <a>
+                        <span class="service-item-category">We do</span>
+                        <h2 class="service-item-title">Ambuluwawa</h2>
+                      </a>
+                    </div>
+                    <img src="assets/img/Travel/about-Ambuluwawa-Biodiversity-Complex.jpg" alt="Image" class="img-fluid">
+                  </div>
+                </div>
+
+                <div class="swiper-slide">
+                  <div class="service-item">
+                    <div class="service-item-contents">
+                      <a>
+                        <span class="service-item-category">We do</span>
+                        <h2 class="service-item-title">Vatadage</h2>
+                      </a>
+                    </div>
+                    <img src="assets/img/Travel/about-Vatadage.jpg" alt="Image" class="img-fluid">
+                  </div>
+                </div>
+
+
               </div>
               <div class="swiper-pagination"></div>
             </div>
