--- a/Packages-family_07d.html
+++ b/Packages-family_07d.html
@@ -187,7 +187,7 @@
     <main class="main">
 
       <!-- Page Title -->
-      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Travel/jaffna.jpg);">
+      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Tour\ Packages/family-holidays-in-sri-lanka.jpg);">
         <div class="container position-relative">
           <h1>Family Itineraries 07 Days - Family Holidays in Sri Lanka</h1>
           <p>Sri Lanka is a perfect holiday destination for a family traveling with toddlers. You will never have to worry about kids getting bored here.</p>
@@ -217,7 +217,7 @@
                             <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 1.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 2.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages//Family-Holidays 2.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
                             <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 3.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
