edir tour packeges

--- a/Packages-cultural_07d.html
+++ b/Packages-cultural_07d.html
@@ -187,7 +187,7 @@
     <main class="main">
 
       <!-- Page Title -->
-      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Travel/jaffna.jpg);">
+      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Travel/dalada_maligava.jpg);">
         <div class="container position-relative">
           <h1>Culture Itineraries 07 Days - Sri Lanka Culture Trip</h1>
           <p>It is not just the beauty of the island mesmerizes its visitors, but the people, their beliefs and the great civilization from which they have come.</p>
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 1.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/cultural 02.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 2.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/cultural 01.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 3.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/cultural 03.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                     </div>
                 
@@ -319,7 +319,7 @@
                         </div>
                       </div>
                       <hr>
-                      <a href="Packages-family_14d.html" class="readmore stretched-link"><span style="font-size: 13px;">Read More</span><i class="bi bi-arrow-right"></i></a>
+                      <a href="Packages-cultural_14d.html" class="readmore stretched-link"><span style="font-size: 13px;">Read More</span><i class="bi bi-arrow-right"></i></a>
                     </div>
                   </div>
                 </div>
