--- a/Packages-wildlife_07d.html
+++ b/Packages-wildlife_07d.html
@@ -187,7 +187,7 @@
     <main class="main">
 
       <!-- Page Title -->
-      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Travel/jaffna.jpg);">
+      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Things\ To\ Do\ in\ Sri\ Lanka/Turtle\ 2.jpg);">
         <div class="container position-relative">
           <h1>WildLife Itineraries 07 Days - Wildlife & Safari Tours</h1>
           <p>You will be astounded by the authentic experiences of Sri Lanka Wildlife.</p>
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 1.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Things To Do in Sri Lanka/elephants+yala+national+park+sri+lanka.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 2.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Things To Do in Sri Lanka/Turtle 1.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 3.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Things To Do in Sri Lanka/yala_bird.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                     </div>
                 
