--- a/about.html
+++ b/about.html
@@ -263,15 +263,46 @@
         </div>
       </section>
 
+      <section id="about-3" class="about-3 section">
+
+        <div class="container">
+          <div class="row gy-4 justify-content-between align-items-center">
+            <div class="col-lg-6 order-lg-2 position-relative" data-aos="zoom-out">
+              <img src="assets/img/Travel/about-2.jpg" alt="Image" class="img-fluid about_2-img">
+                <span class="play"><i class="bi bi-play-fill"></i></span>
+              </a>
+            </div>
+            <div class="col-lg-5 order-lg-1" data-aos="fade-up" data-aos-delay="100">
+              <h2 class="content-title mb-4"><b>About SriLanka</b></h2>
+              <p>Welcome to <i>"The Pearl of the Indian Ocean"</i> – Your Gateway to Oceanic Adventures!</p>
+              <p class="mb-4">
+                Sri Lanka, an island paradise in the heart of the Indian Ocean, is a land of breathtaking landscapes, rich history, and vibrant culture. From golden beaches and lush tea plantations 
+                to ancient ruins and diverse wildlife, Sri Lanka offers a perfect blend of adventure, relaxation, and heritage.
+              </p>
+
+              <h5>Stunning Beaches:</h5>
+              <p class="mt-0">Relax on pristine shores and experience world-class surfing, divig and snorkeling.</p>
+
+              <h5>Wildlife & Nature:</h5>
+              <p class="mt-0">Spot elephants, leopards, and whales in national parks and marine sanctuaries.</p>
+
+              <h5>Scenic Hill Country:</h5>
+              <p class="mb-4 mt-0">Wander through misty mountains, waterfalls, and lush tea estates.</p>
+
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!-- Team Section -->
-      <section class="team-15 team section" id="team">
-        <!-- Section Title -->
+      <!-- <section class="team-15 team section" id="team">
+
         <div class="container section-title" data-aos="fade-up">
           <h2><b>Team</b></h2>
-          <p>At Mirissa Snorkeling Center, our passionate and skilled team is dedicated to making your marine adventures extraordinary. 
-            From professional diving instructors to friendly local guides, we combine expertise with a deep love for the ocean to provide safe, 
+          <p>At Travels Go Lanka, our passionate and skilled team is dedicated to making your marine adventures extraordinary. 
+            From professional diving instructors to friendly local guides, we combine expertise with a deep love to provide safe, 
             memorable, and awe-inspiring experiences.</p>
-        </div><!-- End Section Title -->
+        </div>
 
         <div class="content">
           <div class="container">
@@ -355,7 +386,7 @@
           </div>
         </div>
 
-      </section>
+      </section> -->
 
       <!-- Services Section -->
       <section id="services" class="services section">
