--- a/Packages-family_14d.html
+++ b/Packages-family_14d.html
@@ -217,7 +217,7 @@
                             <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 1.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 2.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages//Family-Holidays 2.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
                             <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 3.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
