--- a/Packages-honeymoon_14d.html
+++ b/Packages-honeymoon_14d.html
@@ -187,7 +187,7 @@
     <main class="main">
 
       <!-- Page Title -->
-      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Travel/jaffna.jpg);">
+      <div class="page-title dark-background" data-aos="fade" style="background-image: url(assets/img/Tour\ Packages/honeymoon\ 4.jpg);">
         <div class="container position-relative">
           <h1>Honeymoon Itineraries 14 Days - Luxury Honeymoon</h1>
           <p>Spend your honeymoon exploring Sri Lanka. It is the most romantic honeymoon imaginable.  The tour starts with a restful stay in Negombo. </p>
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 1.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/honeymoon.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 2.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/honeymoon 2.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Jaffna-Tour 3.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/honeymoon 3.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
                         </div>
                     </div>
                 
