create lazy loading

--- a/about.html
+++ b/about.html
@@ -311,7 +311,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="person">
                   <figure class="mb-2">
-                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid">
+                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid"  loading="lazy">
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
@@ -323,7 +323,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="person">
                   <figure class="mb-2">
-                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid">
+                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid"  loading="lazy">
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
@@ -335,7 +335,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="person">
                   <figure class="mb-2">
-                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid">
+                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid"  loading="lazy">
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
@@ -349,7 +349,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="person">
                   <figure class="mb-2">
-                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid">
+                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid"  loading="lazy">
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
@@ -361,7 +361,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="person">
                   <figure class="mb-2">
-                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid">
+                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid"  loading="lazy">
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
@@ -373,7 +373,7 @@
               <div class="col-lg-4 col-md-6 mb-4">
                 <div class="person">
                   <figure class="mb-2">
-                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid">
+                    <img src="assets/img/Travel/train.jpg" alt="Image" class="img-fluid"  loading="lazy">
                   </figure>
                   <div class="person-contents">
                     <h3>Name</h3>
