--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
           </div>
 
           <div class="carousel-item">
-            <img src="assets/img/Travel/Srilanka_tea.png" alt="">
+            <img src="assets/img/Travel/Srilanka_tea.jpg" alt="">
             <div class="carousel-container">
               <h2>Hill Country & Tea Plantations</h2>
               <p>Experience breathtaking mountain views and world-famous Ceylon tea.</p>
@@ -776,7 +776,7 @@
               <article class="position-relative h-100">
 
                 <div class="post-img position-relative overflow-hidden">
-                  <img src="assets/img/Tour Packages/WildLife.png" class="img-fluid"  loading="lazy" alt="" style="width: 100%; height: 240px; object-fit: cover;">
+                  <img src="assets/img/Tour Packages/WildLife.jpg" class="img-fluid"  loading="lazy" alt="" style="width: 100%; height: 240px; object-fit: cover;">
                 </div>
 
                 <div class="meta d-flex align-items-end">
@@ -805,7 +805,7 @@
               <article class="position-relative h-100">
 
                 <div class="post-img position-relative overflow-hidden">
-                  <img src="assets/img/Tour Packages/WildLife.png" class="img-fluid"  loading="lazy" alt="" style="width: 100%; height: 240px; object-fit: cover;">
+                  <img src="assets/img/Tour Packages/WildLife.jpg" class="img-fluid"  loading="lazy" alt="" style="width: 100%; height: 240px; object-fit: cover;">
                 </div>
 
                 <div class="meta d-flex align-items-end">
