--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" loading="lazy>
           <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
@@ -208,7 +208,7 @@
           <div class="container">
             <div class="row">
               <div class="col-lg-6 mb-4 mb-lg-0">
-                <img src="assets/img/Travel/about-1.jpg" alt="Image " class="img-fluid img-overlap" data-aos="zoom-out">
+                <img src="assets/img/Travel/about-1.jpg" alt="Travel-go-lanka" class="img-fluid img-overlap" data-aos="zoom-out" loading="lazy>
               </div>
               <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
                 <h3 class="content-subtitle text-white opacity-50">Why Choose Travel Go Lanka?</h3>
@@ -268,7 +268,7 @@
         <div class="container">
           <div class="row gy-4 justify-content-between align-items-center">
             <div class="col-lg-6 order-lg-2 position-relative" data-aos="zoom-out">
-              <img src="assets/img/Travel/about-2.jpg" alt="Image" class="img-fluid about_2-img">
+              <img src="assets/img/Travel/about-2.jpg" alt="Travel-go-lanka" class="img-fluid about_2-img" loading="lazy>
                 <span class="play"><i class="bi bi-play-fill"></i></span>
               </a>
             </div>
@@ -502,7 +502,7 @@
                   <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
                 </a>
                 <a href="" target="_blank" style="margin-right: 10px;">
-                  <img src="assets/img/tripadvisor-logo.svg" alt="TripAdvisor" style="height: 24px; width: 24px;">
+                  <img src="assets/img/tripadvisor-logo.svg" alt="TripAdvisor" style="height: 24px; width: 24px;" loading="lazy>
                 </a>
                 <a href="" target="_blank" style="color: #FF0000;">
                   <i class="bi bi-youtube" style="font-size: 1.5rem;"></i>
@@ -512,7 +512,7 @@
                 </a>
               </div>
               <div class="mt-3 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px" loading="lazy>
               </div>
             </div>
 
