--- a/contact.html
+++ b/contact.html
@@ -166,7 +166,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" loading="lazy>
           <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
@@ -380,7 +380,7 @@
                   <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
                 </a>
                 <a href="" target="_blank" style="margin-right: 10px;">
-                  <img src="assets/img/tripadvisor-logo.svg" alt="TripAdvisor" style="height: 24px; width: 24px;">
+                  <img src="assets/img/tripadvisor-logo.svg" alt="TripAdvisor" style="height: 24px; width: 24px;" loading="lazy>
                 </a>
                 <a href="" target="_blank" style="color: #FF0000;">
                   <i class="bi bi-youtube" style="font-size: 1.5rem;"></i>
@@ -390,7 +390,7 @@
                 </a>
               </div>
               <div class="mt-3 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px">
+                <img src="assets/img/logo.png" alt="Travels-Go-Lanka / Sri Lanka" width="120px" loading="lazy>
               </div>
             </div>
 
