--- a/Packages-cultural_14d.html
+++ b/Packages-cultural_14d.html
@@ -166,7 +166,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" loading="lazy">
           <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Tour Packages/cultural 02.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/cultural 02.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Tour Packages/cultural 01.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/cultural 01.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Tour Packages/cultural 03.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" >
+                            <img src="assets/img/Tour Packages/cultural 03.jpg" class="d-block img-fluid" alt="Family Itineraries 07 Days - Family Holidays in Sri Lanka" loading="lazy">
                         </div>
                     </div>
                 
@@ -433,7 +433,7 @@
                 </a>
               </div>
               <div class="mt-3 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px" loading="lazy">
               </div>
             </div>
 
