--- a/ThingsToDoinSriLanka.html
+++ b/ThingsToDoinSriLanka.html
@@ -166,7 +166,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" loading="lazy">
           <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
@@ -464,7 +464,7 @@
                 </a>
               </div>
               <div class="mt-3 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px" loading="lazy">
               </div>
             </div>
 
