--- a/info-adams_peak.html
+++ b/info-adams_peak.html
@@ -166,7 +166,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" loading="lazy">
           <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 2.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" >
+                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 2.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 1.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" >
+                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 1.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 4.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" >
+                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 4.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
                         </div>
                     </div>
                 
@@ -361,7 +361,7 @@
                 </a>
               </div>
               <div class="mt-3 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px" loading="lazy">
               </div>
             </div>
 
