--- a/info-temple_of_tooth.html
+++ b/info-temple_of_tooth.html
@@ -166,7 +166,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" loading="lazy">
           <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/temple-of-the-sacred-tooth-relic-kandy-sri-lanka.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" >
+                            <img src="assets/img/Things To Do in Sri Lanka/temple-of-the-sacred-tooth-relic-kandy-sri-lanka.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/temple-of-the-sacred-tooth-relic-kandy.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" >
+                            <img src="assets/img/Things To Do in Sri Lanka/temple-of-the-sacred-tooth-relic-kandy.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/dalada_maligava.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" >
+                            <img src="assets/img/Things To Do in Sri Lanka/dalada_maligava.jpg" class="d-block img-fluid" alt="Temple of the Tooth Relic (Sri Dalada Maligawa)" loading="lazy">
                         </div>
                     </div>
                 
@@ -363,7 +363,7 @@
                 </a>
               </div>
               <div class="mt-3 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px" loading="lazy">
               </div>
             </div>
 
