--- a/info-yala_national_park.html
+++ b/info-yala_national_park.html
@@ -166,7 +166,7 @@
       <div class="container-fluid container-xl position-relative d-flex align-items-center justify-content-between">
 
         <a href="index.html" class="logo d-flex align-items-center">
-          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka">
+          <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" loading="lazy">
           <h1 class="sitename">Travels Go Lanka</h1>
         </a>
 
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/sri-lanka-leopard-asian.jpg" class="d-block img-fluid" alt="Yala National Park | leopard" >
+                            <img src="assets/img/Things To Do in Sri Lanka/sri-lanka-leopard-asian.jpg" class="d-block img-fluid" alt="Yala National Park | leopard" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/yala_bird.jpg" class="d-block img-fluid" alt="Yala National Park Bird" >
+                            <img src="assets/img/Things To Do in Sri Lanka/yala_bird.jpg" class="d-block img-fluid" alt="Yala National Park Bird" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/elephants+yala+national+park+sri+lanka.jpg" class="d-block img-fluid" alt="Yala National Park | Elephants" >
+                            <img src="assets/img/Things To Do in Sri Lanka/elephants+yala+national+park+sri+lanka.jpg" class="d-block img-fluid" alt="Yala National Park | Elephants" loading="lazy">
                         </div>
                     </div>
                 
@@ -364,7 +364,7 @@
                 </a>
               </div>
               <div class="mt-3 footer-links d-flex align-items-center justify-content-center">
-                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px">
+                <img src="assets/img/logo.png" alt="Travels Go Lanka / Sri Lanka" width="120px" loading="lazy">
               </div>
             </div>
 
