--- a/info-adams_peak.html
+++ b/info-adams_peak.html
@@ -214,13 +214,13 @@
                 <div id="imageCarousel" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 2.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
+                            <img src="assets/img/Things To Do in Sri Lanka/Adams Peak Sri Pada_2.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 1.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
+                            <img src="assets/img/Things To Do in Sri Lanka/Adams Peak Sri Pada_1.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
                         </div>
                         <div class="carousel-item">
-                            <img src="assets/img/Things To Do in Sri Lanka/Adam’s Peak (Sri Pada) 4.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
+                            <img src="assets/img/Things To Do in Sri Lanka/Adams Peak Sri Pada_4.jpg" class="d-block img-fluid" alt="Adam’s Peak – The Sacred Mountain of Sri Lanka" loading="lazy">
                         </div>
                     </div>
                 
