--- a/contact.html
+++ b/contact.html
@@ -207,7 +207,7 @@
 
         <div class="container mb-5" data-aos="fade">
           <div class="col-lg-12">
-            <div class="info">
+            <div class="info" id="get_quote">
               <h3>Ready for Adventure? Plan Your Sri Lanka Escape – Free Quote in a Day!</h3>
               <p>Fill out the form below to get started on your unforgettable journey with Travels Go Lanka. Our team will respond within 24 hours to provide you with a personalized quote and help you plan your dream vacation.</p>
               <form id="contactForm">
