--- a/index.html
+++ b/index.html
@@ -195,6 +195,7 @@
             <div class="carousel-container">
               <h2>Sri Lanka Tour Packages</h2>
               <p>Explore customized travel experiences across Sri Lanka.</p>
+              <a href="contact.html#get_quote" style="font-size: 18px; color: yellow;">Get Quote</a>
             </div>
           </div>
 
@@ -203,6 +204,7 @@
             <div class="carousel-container">
               <h2>Wildlife & Safari Tours</h2>
               <p>Discover elephants, leopards, and more in Sri Lanka’s national parks.</p>
+              <a href="contact.html#get_quote" style="font-size: 18px; color: yellow; border: 2px solid yellow; padding: 5px 8px 5px 8px; border-radius: 15px;">Get Quote</a>
             </div>
           </div>
 
@@ -211,6 +213,7 @@
             <div class="carousel-container">
               <h2>Cultural & Heritage Tours</h2>
               <p>Discover the rich history and vibrant culture of Sri Lanka with our Cultural & Heritage Tours.</p>
+              <a href="contact.html#get_quote" style="font-size: 18px; color: yellow;">Get Quote</a>
             </div>
           </div>
 
@@ -219,6 +222,7 @@
             <div class="carousel-container">
               <h2>Beach & Water Adventures</h2>
               <p>Enjoy snorkeling, diving, and surfing in Sri Lanka’s stunning beaches.</p>
+              <a href="contact.html#get_quote" style="font-size: 18px; color: yellow;">Get Quote</a>
             </div>
           </div>
 
@@ -227,6 +231,7 @@
             <div class="carousel-container">
               <h2>Hill Country & Tea Plantations</h2>
               <p>Experience breathtaking mountain views and world-famous Ceylon tea.</p>
+              <a href="contact.html#get_quote" style="font-size: 18px; color: yellow;">Get Quote</a>
             </div>
           </div>
 
