add social media

--- a/info-family_beaches.html
+++ b/info-family_beaches.html
@@ -394,13 +394,13 @@
                 <a href="https://www.facebook.com/share/18aAmqQkGS/" target="_blank" style="color: #1877F2; margin-right: 10px;">
                   <i class="bi bi-facebook" style="font-size: 1.5rem;"></i>
                 </a>
-                <a href="" target="_blank" style="color: #E4405F; margin-right: 10px;">
+                <a href="https://www.instagram.com/travelsgolanka/" target="_blank" style="color: #E4405F; margin-right: 10px;">
                   <i class="bi bi-instagram" style="font-size: 1.5rem;"></i>
                 </a>
-                <a href="" target="_blank" style="margin-right: 10px;">
+                <a href="https://www.tripadvisor.com/Attraction_Review-g4464183-d33037006-Reviews-Travels_Go_Lanka-Padukka_Western_Province.html" target="_blank" style="margin-right: 10px;">
                   <img src="assets/img/tripadvisor-logo.svg" alt="TripAdvisor" style="height: 24px; width: 24px;">
                 </a>
-                <a href="" target="_blank" style="color: #FF0000;">
+                <a href="https://youtube.com/@travelsgolanka?si=2yM9TmAvziynBjeL" target="_blank" style="color: #FF0000;">
                   <i class="bi bi-youtube" style="font-size: 1.5rem;"></i>
                 </a>
                 <a href="" target="_blank" style="color: #080808;">
