--- a/index.html
+++ b/index.html
@@ -90,6 +90,53 @@
     <!-- Preload -->
     <link rel="preload" href="https://unpkg.com/swiper/swiper-bundle.min.css" as="style">
 
+    <!-- Preload LCP image (first hero image) -->
+    <link rel="preload" as="image" href="assets/img/Travel/train.jpg">
+
+    <!-- Inline Critical CSS -->
+    <style>
+      /* Critical styles for above-the-fold content */
+      body {
+        margin: 0;
+        font-family: 'Open Sans', sans-serif;
+      }
+      header {
+        background: #000;
+        color: #fff;
+        padding: 10px 0;
+      }
+      .hero {
+        position: relative;
+        overflow: hidden;
+      }
+      .hero img {
+        width: 100%;
+        height: auto;
+        display: block;
+      }
+      .carousel-container {
+        position: absolute;
+        bottom: 20%;
+        left: 5%;
+        color: white;
+        z-index: 2;
+      }
+      .get_quote {
+        display: inline-block;
+        padding: 8px 20px;
+        background: #ffa500;
+        color: white;
+        border-radius: 5px;
+        text-decoration: none;
+      }
+    </style>
+
+    <!-- Defer non-critical CSS -->
+    <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" media="print" onload="this.media='all'">
+    <link href="assets/css/main.css" rel="stylesheet" media="print" onload="this.media='all'">
+
     <!-- Mobile Optimization Tags -->
     <meta name="theme-color" content="#000000">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -138,8 +185,8 @@
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com" rel="preconnect">
-    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Marcellus:wght@400&display=swap" rel="stylesheet">
 
     <!-- Vendor CSS Files -->
@@ -191,7 +238,7 @@
         <div id="hero-carousel" class="carousel slide carousel-fade" data-bs-ride="carousel" data-bs-interval="5000">
 
           <div class="carousel-item active">
-            <img src="assets/img/Travel/train.jpg" alt="Sri-Lanka-Train-Train" loading="lazy">
+            <img src="assets/img/Travel/train.jpg" alt="Sri-Lanka-Train" loading="lazy">
             <div class="carousel-container">
               <h2>Sri Lanka Tour Packages</h2>
               <p>Explore customized travel experiences across Sri Lanka.</p>
@@ -1108,26 +1155,25 @@
     <div id="preloader"></div>
 
     <!-- Vendor JS Files -->
-    <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/vendor/php-email-form/validate.js"></script>
-    <script src="assets/vendor/aos/aos.js"></script>
-    <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
-    <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script defer src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script defer src="assets/vendor/php-email-form/validate.js"></script>
+    <script defer src="assets/vendor/aos/aos.js"></script>
+    <script defer src="assets/vendor/swiper/swiper-bundle.min.js"></script>
+    <script defer src="assets/vendor/glightbox/js/glightbox.min.js"></script>
 
     <!-- Main JS File -->
-    <script src="assets/js/main.js"></script>
+    <script defer src="assets/js/main.js"></script>
 
   </body>
 
 </html>
 
 <script>
-
-   AOS.init({
-    duration: 1500, // Animation duration
-    once: false,    // Set to false for repeated animations on scroll
-  });
-
+  window.onload = function() {
+    if (typeof AOS !== 'undefined') {
+      AOS.init({ duration: 1500 });
+    }
+  };
 </script>
 
 <script>
